--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # DB Servers
 SERVER="LOCALHOST"
-SQLALCHEMY_DRIVER="somedriver"
-PYODBC_DRIVER="somedriver"
-DATABASE="dbname"
-UID=""
+PORT=3306
+SQLALCHEMY_DRIVER="MySQL ODBC 8.2 Unicode Driver"
+PYODBC_DRIVER="MySQL ODBC 8.2 Unicode Driver"
+DATABASE="secretsq"
+UID="root"
 PID=""
+BASE_DIRECTORY="C:/Development/DOD/Fun_With_ML/"
