--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SERVER="LOCALHOST"
 PORT=3306
 SQLALCHEMY_DRIVER="MySQL ODBC 8.2 Unicode Driver"
 PYODBC_DRIVER="MySQL ODBC 8.2 Unicode Driver"
-DATABASE="secretsq"
+DATABASE="example_db"
 UID="root"
 PID=""
 BASE_DIRECTORY="C:/Development/Fun_With_ML/"
