--- a/.env_template
+++ b/.env_template
@@ -5,5 +5,5 @@ SQLALCHEMY_DRIVER="MySQL ODBC 8.2 Unicode Driver"
 PYODBC_DRIVER="MySQL ODBC 8.2 Unicode Driver"
 DATABASE="example_db"
 UID="root"
-PID="nerWjsj2Zd5584CLEc0b"
+PID=""
 BASE_DIRECTORY="C:/Development/Fun_With_ML/"
