--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SERVER="LOCALHOST"
 PORT=3306
 SQLALCHEMY_DRIVER="MySQL ODBC 8.2 Unicode Driver"
 PYODBC_DRIVER="MySQL ODBC 8.2 Unicode Driver"
-DATABASE="example_db"
+DATABASE="fed_benefits"
 UID="root"
 PID="nerWjsj2Zd5584CLEc0b"
 BASE_DIRECTORY="C:/Development/Fun_With_ML/"
