--- a/requirements_noaudio.txt
+++ b/requirements_noaudio.txt
@@ -17,6 +17,8 @@ cymem==2.0.8
 decorator==4.4.2
 et-xmlfile==1.1.0
 fonttools==4.45.1
+funcy==2.0
+gensim==4.3.2
 greenlet==3.0.2
 idna==3.6
 imageio==2.33.1
@@ -34,6 +36,7 @@ msgpack==1.0.7
 murmurhash==1.0.10
 mutagen==1.47.0
 nltk==3.8.1
+numexpr==2.8.8
 numpy==1.26.2
 openpyxl==3.1.2
 packaging==23.2
@@ -48,6 +51,7 @@ pycryptodomex==3.19.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 pygame==2.5.2
+pyLDAvis==3.4.1
 PyMySQL==1.1.0
 pyodbc==5.0.1
 pyparsing==3.1.1
